Layout/clipping fixes

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,26 +4,38 @@
   background-color: $ms-color-gray30;
   min-height: calc(100vh - 24px);
   padding-bottom: 24px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .contentContainer {
+  flex-grow: 1;
+
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
 
+$max-frame-width: 1600px;
+
 @mixin frame-constrained {
-  max-width: 1600px;
+  max-width: \min(100%, $max-frame-width);
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
-.cardContainer {
+.cardContainer {  
   @include frame-constrained();
+
+  flex-grow: 1;
 
   flex-direction: row;
   flex-wrap: wrap;
   display: flex;
-  align-items: stretch;
+  align-items: center;
+  align-content: flex-start;
   justify-content: center;
 
   // recharts toolbars may transiently overflow the content area during
